--- a/dayone/pom.xml
+++ b/dayone/pom.xml
@@ -48,23 +48,23 @@
 				</executions>
 			</plugin>
 		</plugins>
-		
-		    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.3</version>
-          <dependencies>
-            <dependency><!-- add support for ssh/scp -->
-              <groupId>org.apache.maven.wagon</groupId>
-              <artifactId>wagon-ssh</artifactId>
-              <version>1.0</version>
-            </dependency>
-          </dependencies>
-        </plugin>
-      </plugins>
-    </pluginManagement>
+
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-site-plugin</artifactId>
+					<version>3.3</version>
+					<dependencies>
+						<dependency><!-- add support for ssh/scp -->
+							<groupId>org.apache.maven.wagon</groupId>
+							<artifactId>wagon-ssh</artifactId>
+							<version>1.0</version>
+						</dependency>
+					</dependencies>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<dependencies>
@@ -79,13 +79,18 @@
 			<artifactId>dd-plist</artifactId>
 			<version>1.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.swinglabs</groupId>
+			<artifactId>swingx</artifactId>
+			<version>1.6.1</version>
+		</dependency>
 	</dependencies>
-	
-	  <distributionManagement>
-    <site>
-      <id>langurmonkey.no-ip.org</id>
-      <url>scp://langurmonkey.no-ip.org/var/www/dayone/</url>
-    </site>
-  </distributionManagement>
-  
+
+	<distributionManagement>
+		<site>
+			<id>langurmonkey.no-ip.org</id>
+			<url>scp://langurmonkey.no-ip.org/var/www/dayone/</url>
+		</site>
+	</distributionManagement>
+
 </project>
