Added menus and the ability to change directory.

--- a/dayone/pom.xml
+++ b/dayone/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>uk.co.gregreynolds</groupId>
 	<artifactId>dayone</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>dayone</name>
@@ -12,6 +12,8 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<version.template.file>src/main/java/uk/co/gregreynolds/dayone/Version.java.template</version.template.file>
+		<version.file>src/main/java/uk/co/gregreynolds/dayone/Version.java</version.file>
 	</properties>
 
 	<build>
@@ -47,6 +49,39 @@
 					</execution>
 				</executions>
 			</plugin>
+
+			<plugin>
+				<groupId>com.google.code.maven-replacer-plugin</groupId>
+				<artifactId>maven-replacer-plugin</artifactId>
+				<version>1.4.0</version>
+				<executions>
+					<execution>
+						<phase>prepare-package</phase>
+						<goals>
+							<goal>replace</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<file>${version.template.file}</file>
+					<outputFile>${version.file}</outputFile>
+					<replacements>
+						<replacement>
+							<token>@buildnumber@</token>
+							<value>${svn.revision}</value>
+						</replacement>
+						<replacement>
+							<token>@buildtime@</token>
+							<value>${maven.build.timestamp}</value>
+						</replacement>
+						<replacement>
+							<token>@pomversion@</token>
+							<value>${project.version}</value>
+						</replacement>
+					</replacements>
+				</configuration>
+			</plugin>
+
 		</plugins>
 
 		<pluginManagement>
