--- a/dayone/pom.xml
+++ b/dayone/pom.xml
@@ -13,7 +13,7 @@
 
 	<groupId>uk.co.gregreynolds</groupId>
 	<artifactId>dayone</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>dayone</name>
